--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TO DO</title>
 </head>
 <body>
-    <p>HELLO</p>
+    <p> TO DO </p>
     <script src="./assets/index.js"></script>
 </body>
 </html>
